# WhisperNet-Offensive

./: .gitignore  InstallInstructions.md  README.md  install.sh  prep_for_release.sh  requirements.txt  run_tests.sh
.github/workflows/: python-package.yml
Documentation/: Docs-Working.md  install.sh  mkdocs.yml  requirements.txt
Documentation/docs/: Project_Architecture.md  index.md
Documentation/docs/Agents/: agents.md
Documentation/docs/All/: setup.md  starting.md
Documentation/docs/DocTemplates/: ClassTemplate.md
Documentation/docs/General/: Project_Architecture.md
Documentation/docs/Server/: PluginSpec.md  Quick_Start.md  Scripts.md  Server.md  docker-plan.md
Documentation/docs/Web_Interface/: CommandConsole.md  General.md  README.md  Web Interface.md  web_interface.md
Documentation/docs/Websockets/: Websockets.md
Documentation/docs_drawio/: docker_compile_graph.drawio  websocket_mapping.drawio
Documentation/docs_venv/: pyvenv.cfg
Server/: README.md  docker_build.py  install.sh  prep_for_release.sh  requirements.txt  run_tests.sh  start.sh  whoami_output.txt
Server/_docker/dockerfiles/: debian_windows_agent_multi copy.dockerfile  debian_windows_agent_x64.dockerfile  debian_windows_custom_multi.dockerfile  debian_windows_custom_x64.dockerfile  debian_windows_dropper_x64.dockerfile  debian_windows_x64.dockerfile  watch_and_run.sh
Server/agents/dropper/: Cargo.toml
Server/agents/windows/dropper/: Cargo.toml
Server/app/: env.example  whispernet.py
Server/app/config/: config.yaml
Server/app/ftp/: test.py
Server/app/modules/: agent.py  agent_script_interpreter.py  binary_constructor.py  binary_models.py  client.py  config.py  credstore.py  docker_builder.py  docker_builder_dep copy.py  docker_handler.py  form_j.py  instances.py  listener.py  log.py  models.py  redis_models.py  redis_utils.py  startup.py  tls.py  utils.py
Server/data/agent_templates/dll_x64/: CMakeLists.txt  CMakeLists.txt.original  comms_http.h  core.c  whisper_commands.h  whisper_config.h  whisper_credmanager.h  whisper_dynamic_config.h  whisper_json.h  whisper_winapi.c  whisper_winapi.h
Server/data/agent_templates/dll_x64/scripts/: default.py
Server/data/agent_templates/unix_x64/: CMakeLists.txt  cJSON.c  cJSON.h  comms_http.h  core.c  whisper_commands.h  whisper_config.h  whisper_json.h
Server/data/agent_templates/unix_x64/scripts/: default.py
Server/data/agent_templates/win_exe_x64/: CMakeLists.txt  comms_http.h  core.c  type_conversions.h  whisper_commands.h  whisper_config.h  whisper_credmanager.c  whisper_dynamic_config.c  whisper_dynamic_config.h  whisper_heapconfig.c  whisper_heapconfig.h  whisper_json.c  whisper_json.h  whisper_structs.h  whisper_toolbox.c  whisper_toolbox.h  whisper_winapi.c
Server/data/agent_templates/win_exe_x64/scripts/: default+upx+strip.py  default.py  generate_shellcode.py
Server/data/compiled/: build_log.txt
Server/data/scripts/: default.py  default.yaml  ghostpack.yaml  linux_default.py  script1.yaml  test.py
Server/data/static/: 01_BasicStaticAnalysis.docx  CPTC-Globals.docx  CPTC-Regionals-24-Team-07.docx  CSC437_SP25.docx  Computers Page - Minnesota Judicial Branch - 1738332538724.csv  DSU_Patched_For_Globals.docx  export (1).csv  export (2).csv  export.csv  m2.txt  message.txt  new_output.docx  nmap prod.txt  remove wavebrowser.ps1  stg  users.yml  vulnerabilities.yml
Server/docs/: Audit.md  DatabaseStructure.md  FormJKeys.md  QuickStart.md  Redis_Models.md  Simple_HTTP.md  Stats.md  UserAuthentication.md  WSGI_TLS_Etc.md  ftp_server.md
Server/profiles/: dev.yaml
Setup/: requirements.txt
Standalone/whisper_winapi/: configure.py  example_usage.c  template_whisper_config.h
Web/: .gitignore  about.py  agent.py  auth.py  build.py  cards.py  config.py  credstore.py  error.py  files.py  home.py  listener.py  logs.py  logs_export.txt  main.py  main_old.py  multi_console.py  navbar.py  networking.py  perf_testing.py  requirements.txt  run.sh  scripts.py  searchbar.py  settings.py  test2.py
Web/data/scripts/: example_script.py
Web/old_web/: install.sh  main.py  notes.md
Web/old_web/app/: startup.py
Web/old_web/static/: particlesjs-config.json
Web/script/: script_api.py  socket_client.py
WebInterface/: README.md  build_log.txt  install.sh  main.py  notes.md  prep_for_release.sh  requirements.txt
WebInterface/app/: startup.py
WebInterface/app/modules/: binary_builder.py  clients.py  command_console.py  config.py  form_j.py  home.py  key_constructor.py  login.py  plugins.py  static.py  ui_elements.py  utils.py
WebInterface/docs/: CommandConsole.md  General.md
app/: comms_dev.py  form_j.py  start.sh  whispernet.py
app/config/: config.yaml
app/modules/: audit.py  banner.py  config.py  instances.py  log.py  models.py  redis_models.py  sync_powershell.py  utils.py
app/plugins/: TestPlugin.py  plugin_template.py  user_authentication.py
app/plugins/simple_http/: Untitled-1  simple_http.py
app/plugins/stats/: stats.py
development/: README.md
development/gui/: main.py  notes.md
development/gui/app/: command_console.py  startup.py
development/gui/docs/: CommandConsole.md  General.md
development/scripts/: .vlmt_client.py.swp  create_plugin.sh  vlmt_client.py
development/scripts/docker/: docker_from_py.py
development/scripts/simple_http/: simple_http.py
development/scripts/stats/: stats.py
development/tests/: client_load_test.py  config.yaml  donut_test.py  ftp_test.py  load_yaml.py  looping_clients.py  looping_clients_custom_post.py  manual_test.py  mock_client.py  mock_rev_shell.py  simple_http.py  stats.py  user_auth.py  validate_api.sh
development/tests/Test/: ll_cred_testing.c  user_cred_db_testing.c
development/tests/old_test/: docker.py  (+3 more)
development/vscode/: WhisperNet-Offensive.code-workspace  user_formatting_settings.json
docs/: DatabaseStructure.md  FormJ.md  FormJKeys.md  PluginArchitecture.md  Project_Architecture,md  Redis.md  Redis_working.md  Simple_HTTP.md  UserAuthentication.md  WSGI.md  WorkingPluginReword.md  tls-ssl.md
file-beacon-v1/: file-beacon-v1.py
(+140 files in other folders)
