[package]
name = "windows_dropper"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi={ version = "0.3.9", features = [
    "errhandlingapi",
    "memoryapi",
    "processthreadsapi",
    "synchapi",
    "winnt"
]}

# Stripping binary to make rev harder
[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort" # just exit, don't backtrace on panic
